Products.CMFCalendar Changelog
==============================

2.2.0 (unreleased)
------------------

- profiles: Added an add view expression to the Event content type definition.

- Fixed a bug were the last day of each month was missed.
  (see https://dev.plone.org/plone/ticket/7238)

- Event GenericSetup type definition: Add an icon URL expression to the 
  Event content type definition.

- Event: Added basic iCal and vCal views
  (https://bugs.launchpad.net/zope-cmf/+bug/161714)

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFCalendar Content".

- Event: 'addEvent' no longer sends add events.

- profiles: Removed obsolete local import step registrations.

- setup handler: Improved 'various-calendar' import step. Added flag file 
  check and global registration.

- CalendarTool: Added a new method getNextEvent to grab the next event
  relative to a given point in time.
  (http://www.zope.org/Collectors/CMF/462)


2.1.2-beta (2008-08-26)
------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.


2.1.1 (2008-01-06)
------------------

- no changes


2.1.1-beta(2007-12/29)
----------------------

- Testing: Derive test layers from ZopeLite layer if available.


2.1.0 (2007-08-08)
------------------

- Fixed all componentregistry.xml files to use plain object paths and strip
  and slashes. GenericSetup does only support registering objects which are
  in the site root.


2.1.0-beta2 (2007-07-12)
------------------------

- moved the Zope dependency to version 2.10.4

- Remove antique usage of marker attributes in favor of interfaces,
  leaving BBB behind for places potentially affecting third-party code.
  (http://www.zope.org/Collectors/CMF/440)

- Add POST-only protections to security critical methods.
  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240)

- Fixed DST-driven test breakage by adding an optional 'zone' argument to 